# redis-lingua-module

./: Cargo.toml  Dockerfile  README.md  build.rs
src/: command.rs  config.rs  detector.rs  lib.rs
tests/: lib.rs
